# 3gpp-xml-cm-splitter

./: Cargo.toml
src/: main.rs
